tests/error/py_errors/guppy_name1.py
from tests.error.util import guppy


@guppy
def foo(x: int) -> int:
    return py(x + 1)
